# c4rw

./: README.md  install-on-linux.sh  install-on-windows.txt
assets/: last.field
code/: CMakeLists.txt  CMakePresets.json  create_fields.cpp  robot.cpp  robot.h  task1_commands.cpp  task1_series_of_commands.cpp  task2_create_commands.cpp  task2_make_your_own_commands.cpp  task3_change_the_order_of_commands.cpp  task3_goto.cpp
